扫雷第一版

--- a/src/assets/css/alan.css
+++ b/src/assets/css/alan.css
@@ -16,6 +16,10 @@
   clear: both;
 }
 
+.collapsible.full-width {
+  width: 100%;
+}
+
 /* Alert弹窗动画 */
 .alanAlert-enter-active {
   animation: alertIn .3s;
