扫雷新增计时

--- a/src/assets/css/sweep.scss
+++ b/src/assets/css/sweep.scss
@@ -102,4 +102,10 @@
 
 .mine_tip {
   padding-left: 30px;
+  display: inline-block;
+}
+
+.user-date{
+  display: inline-block;
+  padding-left: 30px;
 }
