--- a/src/assets/css/bird.scss
+++ b/src/assets/css/bird.scss
@@ -1,5 +1,5 @@
 .bird_bg {
-  background: url('~@image/snake/geometry.png');
+  background: url("~@image/snake/geometry.png");
   height: 100vh;
 }
 
@@ -36,12 +36,12 @@
 
 .land {
   height: 50px;
-  background: url('~@image/bird/land.png');
+  background: url("~@image/bird/land.png");
 }
 
 .bird_box {
   height: 480px;
-  background: url('~@image/bird/sky.png');
+  background: url("~@image/bird/sky.png");
   background-position: center center;
   position: relative;
   animation: birdBgMove 5s infinite linear;
@@ -55,8 +55,7 @@
 }
 
 .birdJump {
-  animation: birdJump .3s;
-
+  animation: birdJump 0.3s;
 }
 
 @keyframes birdJump {
@@ -86,27 +85,27 @@
 .birdWing {
   width: 100%;
   height: 100%;
-  animation: birdWing .5s infinite;
+  animation: birdWing 0.5s infinite;
 }
 
 @keyframes birdWing {
   0% {
-    background: url('~@image/bird/bird2.png') center center;
+    background: url("~@image/bird/bird2.png") center center;
     background-size: 195% 195%;
   }
 
   33% {
-    background: url('~@image/bird/bird0.png') center center;
+    background: url("~@image/bird/bird0.png") center center;
     background-size: 195% 195%;
   }
 
   66% {
-    background: url('~@image/bird/bird1.png') center center;
+    background: url("~@image/bird/bird1.png") center center;
     background-size: 195% 195%;
   }
 
   100% {
-    background: url('~@image/bird/bird2.png') center center;
+    background: url("~@image/bird/bird2.png") center center;
     background-size: 195% 195%;
   }
 }
@@ -143,6 +142,6 @@
   padding-top: 10px;
 }
 
-.birdScoreSpan{
+.birdScoreSpan {
   padding: 10px;
 }
