--- a/src/assets/css/paper.css
+++ b/src/assets/css/paper.css
@@ -277,7 +277,7 @@ hr::after {
   top: -.75rem
 }
 .paper {
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid #c1c0bd;
   box-shadow: -1px 5px 35px -9px rgba(0,0,0,.2);
   margin-bottom: 1rem;
